# server/src/controllers/asset-media.controller.ts
@@ -1,38 +1,47 @@
 import {
   Body,
   Controller,
+  Get,
   HttpCode,
   HttpStatus,
   Inject,
+  Next,
   Param,
   ParseFilePipe,
   Post,
   Put,
+  Query,
   Res,
   UploadedFiles,
   UseInterceptors,
 } from '@nestjs/common';
-import { ApiConsumes, ApiTags } from '@nestjs/swagger';
-import { Response } from 'express';
+import { ApiBody, ApiConsumes, ApiHeader, ApiTags } from '@nestjs/swagger';
+import { NextFunction, Response } from 'express';
 import { EndpointLifecycle } from 'src/decorators';
 import {
   AssetBulkUploadCheckResponseDto,
   AssetMediaResponseDto,
   AssetMediaStatusEnum,
   CheckExistingAssetsResponseDto,
+  GetAssetThumbnailDto,
 } from 'src/dtos/asset-media-response.dto';
 import {
   AssetBulkUploadCheckDto,
   CheckExistingAssetsDto,
+  CreateAssetMediaDto,
+  ServeFileDto,
   UpdateAssetMediaDto,
   UploadFieldName,
 } from 'src/dtos/asset-media.dto';
-import { AuthDto } from 'src/dtos/auth.dto';
+import { AuthDto, ImmichHeader } from 'src/dtos/auth.dto';
 import { ILoggerRepository } from 'src/interfaces/logger.interface';
-import { Auth, Authenticated } from 'src/middleware/auth.guard';
+import { AssetUploadInterceptor } from 'src/middleware/asset-upload.interceptor';
+import { Auth, Authenticated, FileResponse } from 'src/middleware/auth.guard';
 import { FileUploadInterceptor, Route, UploadFiles, getFiles } from 'src/middleware/file-upload.interceptor';
 import { AssetMediaService } from 'src/services/asset-media.service';
+import { sendFile } from 'src/utils/file';
 import { FileNotEmptyValidator, UUIDParamDto } from 'src/validation';
+
 @ApiTags('Asset')
 @Controller(Route.ASSET)
 export class AssetMediaController {
@@ -40,6 +49,50 @@ export class AssetMediaController {
     @Inject(ILoggerRepository) private logger: ILoggerRepository,
     private service: AssetMediaService,
   ) {}
+
+  /**
+   * Create an asset from the binary data in the request.
+   */
+  @Post()
+  @UseInterceptors(AssetUploadInterceptor, FileUploadInterceptor)
+  @ApiConsumes('multipart/form-data')
+  @ApiHeader({
+    name: ImmichHeader.CHECKSUM,
+    description: 'sha1 checksum that can be used for duplicate detection before the file is uploaded',
+    required: false,
+  })
+  @ApiBody({
+    type: CreateAssetMediaDto,
+  })
+  @Authenticated({ sharedLink: true })
+  @EndpointLifecycle({ addedAt: 'v1.106.0' })
+  async createAsset(
+    @Auth() auth: AuthDto,
+    @UploadedFiles(new ParseFilePipe({ validators: [new FileNotEmptyValidator(['assetData'])] })) files: UploadFiles,
+    @Body() dto: CreateAssetMediaDto,
+    @Res({ passthrough: true }) res: Response,
+  ): Promise<AssetMediaResponseDto> {
+    const { file, sidecarFile } = getFiles(files);
+    const assetMediaResponse = await this.service.createAsset(auth, dto, file, sidecarFile);
+    if (assetMediaResponse.status === 'duplicate') {
+      res.status(HttpStatus.OK);
+    }
+    return assetMediaResponse;
+  }
+
+  @Get(':id/file')
+  @FileResponse()
+  @Authenticated({ sharedLink: true })
+  @EndpointLifecycle({ addedAt: 'v1.106.0' })
+  async getOriginalBytes(
+    @Res() res: Response,
+    @Next() next: NextFunction,
+    @Auth() auth: AuthDto,
+    @Param() { id }: UUIDParamDto,
+    @Query() dto: ServeFileDto,
+  ) {
+    await sendFile(res, next, () => this.service.getOriginalBytes(auth, id, dto), this.logger);
+  }
 
   /**
    *
@@ -66,10 +119,24 @@ export class AssetMediaController {
     return assetMediaResponse;
   }
 
+  @Get(':id/thumbnail')
+  @FileResponse()
+  @Authenticated({ sharedLink: true })
+  @EndpointLifecycle({ addedAt: 'v1.106.0' })
+  async getThumbnailBytes(
+    @Res() res: Response,
+    @Next() next: NextFunction,
+    @Auth() auth: AuthDto,
+    @Param() { id }: UUIDParamDto,
+    @Query() dto: GetAssetThumbnailDto,
+  ) {
+    await sendFile(res, next, () => this.service.getThumbnailBytes(auth, id, dto), this.logger);
+  }
+
   /**
    * Checks if multiple assets exist on the server and returns all existing - used by background backup
    */
-  @Post('/exist')
+  @Post('exist')
   @HttpCode(HttpStatus.OK)
   @Authenticated()
   checkExistingAssets(
@@ -82,7 +149,7 @@ export class AssetMediaController {
   /**
    * Checks if assets exist by checksums
    */
-  @Post('/bulk-upload-check')
+  @Post('bulk-upload-check')
   @HttpCode(HttpStatus.OK)
   @Authenticated()
   checkBulkUpload(
