# server/src/dtos/asset-media-response.dto.ts
@@ -1,7 +1,26 @@
-import { Optional } from '@nestjs/common';
 import { ApiProperty } from '@nestjs/swagger';
+import { IsEnum, IsOptional } from 'class-validator';
+import { Optional } from 'src/validation';
+
+export enum GetAssetThumbnailFormatEnum {
+  JPEG = 'JPEG',
+  WEBP = 'WEBP',
+}
+export class GetAssetThumbnailDto {
+  @IsOptional()
+  @IsEnum(GetAssetThumbnailFormatEnum)
+  @ApiProperty({
+    type: String,
+    enum: GetAssetThumbnailFormatEnum,
+    default: GetAssetThumbnailFormatEnum.WEBP,
+    required: false,
+    enumName: 'ThumbnailFormat',
+  })
+  format: GetAssetThumbnailFormatEnum = GetAssetThumbnailFormatEnum.WEBP;
+}
 
 export enum AssetMediaStatusEnum {
+  CREATED = 'created',
   REPLACED = 'replaced',
   DUPLICATE = 'duplicate',
 }
@@ -13,7 +32,7 @@ export class AssetMediaResponseDto {
     enumName: 'AssetMediaStatus',
   })
   status?: AssetMediaStatusEnum;
-  @Optional()
+  @IsOptional()
   id?: string;
 }
 
