# server/src/dtos/asset-media.dto.ts
@@ -1,7 +1,17 @@
 import { ApiProperty } from '@nestjs/swagger';
 import { Type } from 'class-transformer';
 import { ArrayNotEmpty, IsArray, IsNotEmpty, IsString, ValidateNested } from 'class-validator';
-import { Optional, ValidateDate } from 'src/validation';
+import { Optional, ValidateBoolean, ValidateDate } from 'src/validation';
+
+export class ServeFileDto {
+  @ValidateBoolean({ optional: true })
+  @ApiProperty({ title: 'Is serve thumbnail (resize) file' })
+  isThumb?: boolean;
+
+  @ValidateBoolean({ optional: true })
+  @ApiProperty({ title: 'Is request made from web' })
+  isWeb?: boolean;
+}
 
 export enum UploadFieldName {
   ASSET_DATA = 'assetData',
@@ -9,6 +19,47 @@ export enum UploadFieldName {
   SIDECAR_DATA = 'sidecarData',
   PROFILE_DATA = 'file',
 }
+
+export class CreateAssetMediaDto {
+  @IsNotEmpty()
+  @IsString()
+  deviceAssetId!: string;
+
+  @IsNotEmpty()
+  @IsString()
+  deviceId!: string;
+
+  @ValidateDate()
+  fileCreatedAt!: Date;
+
+  @ValidateDate()
+  fileModifiedAt!: Date;
+
+  @Optional()
+  @IsString()
+  duration?: string;
+
+  @ValidateBoolean({ optional: true })
+  isFavorite?: boolean;
+
+  @ValidateBoolean({ optional: true })
+  isArchived?: boolean;
+
+  @ValidateBoolean({ optional: true })
+  isVisible?: boolean;
+
+  @ValidateBoolean({ optional: true })
+  isOffline?: boolean;
+
+  // The properties below are added to correctly generate the API docs
+  // and client SDKs. Validation should be handled in the controller.
+  @ApiProperty({ type: 'string', format: 'binary' })
+  [UploadFieldName.ASSET_DATA]!: any;
+
+  @ApiProperty({ type: 'string', format: 'binary', required: false })
+  [UploadFieldName.SIDECAR_DATA]?: any;
+}
+
 export class UpdateAssetMediaDto {
   @IsNotEmpty()
   @IsString()
